Home API Changes
